Improvements for invitation logic